@@ -10,7 +10,6 @@ import org.springframework.stereotype.Component;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Component
 public class CreditHistoryRepositoryImpl implements CreditHistoryRepository {
@@ -39,6 +38,6 @@ public class CreditHistoryRepositoryImpl implements CreditHistoryRepository {
       .map(creditHistoryList ->
         creditHistoryList.stream()
           .map(creditHistoryDataAccessMapper::creditHistoryEntityToCreditHistory)
-          .collect(Collectors.toList()));
+          .toList());
   }
 }
